# erzmark-launcher

./: .gitignore  Launcher-Update-TODO.md  PLANNING.md  README.md  SIGNIERSCHLUESSEL_WICHTIG.txt  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: mobile-build.yml  mobile-ota-update.yml  release.yml
erzmark-app-mobile/: .gitignore  App.js  PLANNING.md  README.md  app.json  eas.json  package-lock.json  package.json
erzmark-app-mobile/src/: theme.js
src/: App.jsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/installer/: EULA.txt
src-tauri/src/: bugreport.rs  bugreport_commands.rs  commands.rs  config.rs  events.rs  events_commands.rs  friend_skin.rs  friends.rs  friends_commands.rs  game_commands.rs  lib.rs  main.rs  news.rs  news_commands.rs  profiles.rs  profiles_commands.rs  settings.rs  settings_commands.rs  skin_commands.rs  social.rs  social_commands.rs  state.rs
src-tauri/src/auth/: minecraft.rs  mod.rs  ms_oauth.rs  pkce.rs  skin.rs  token_store.rs  xbox.rs
src-tauri/src/game/: downloader.rs  fabric.rs  install.rs  install_state.rs  java.rs  launch.rs  manifest.rs  mod.rs  mojang.rs  paths.rs  player_status.rs  screenshots.rs
src/api/: achievements.js  appUpdater.js  auth.js  devManifest.js  events.js  feedback.js  friends.js  game.js  news.js  notifications.js  profileEditor.js  profileMedia.js  profiles.js  screenshots.js  settings.js  skin.js  statsHistory.js
src/components/: AchievementsScreen.jsx  ActiveCharacterCard.jsx  BootAnimation.jsx  BossEventCountdown.jsx  CharacterProfiles.jsx  ComingSoonPanel.jsx  DockTabs.jsx  FeedbackScreen.jsx  FriendProfilePopup.jsx  (+16 more)
website/: download.html
(+40 files in other folders)
